# NLP_Masterthesis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  01-tt-mimicexploration.ipynb  01-tt-mimictraining.ipynb  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  test copy.ipynb  test.ipynb  test.py
.github/: pull_request_template.md
data/: readme.md
docs/: index.html
models/: readme.md  sklearn_logistic_regression_model.pkl
notebooks/: 01-fh-harvard_eda.ipynb  01-hp-lrmodel.ipynb  01-hp-mimic_eda.ipynb  01-tt-datacleaning.ipynb  01-tt-evaluate_results.ipynb  01-tt-mimic_cleaning.ipynb  01-tt-most_commonwords.ipynb  02-fh-data_analysis.ipynb  02-fh-scrape 3.ipynb  02-fh-scrape.ipynb  02-hp-lrmodel-nlpinput.ipynb  02_testBert.ipynb  03-fh-icd_codes-jvsc-6fb791b8-b962-47ce-90f7-27505fca17d39a616ff4-b5f6-4909-81c1-215295fc2ea9.ipynb  03-fh-icd_codes.ipynb  03-fh-symptom_scaper.ipynb  03-hp-lr-pipeline-flo.ipynb  03-hp-lr-pipeline.ipynb  04-fh-checkout_bart.ipynb  04-fh-codes_mapping.ipynb  04-hp-lr-pipeline-lime.ipynb  04-hp-lr-pipeline.ipynb  05-fh-analyze_date..ipynb  05-fh-mimic_exploration.ipynb  05-hp-lrmodel-nopipeline.ipynb  05-hp-nopipeline.ipynb  05-lime-nopipeline.ipynb  06-hp-nopipeline.ipynb  07-hp-lr.ipynb  08-hp-visualizations.ipynb  model_lr.pkl  readme.md  tara_test_nbme_bert_base_uncased_using_pytorch.ipynb  test.py  testgs.ipynb  v01_tara_test_nbme_bert_base_uncased_using_pytorch.ipynb  v03keywordbert.ipynb  v04keywordBert.ipynb
references/: convolutional_models.ipynb  data_exploration.ipynb  evaluation_metrics.md  (+10 more)
(+620 files in other folders)
