[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
src_paths = ["src"]

[tool.interrogate]
ignore-init-module = true
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
color = true
